UtahLiveDataTest/src/objects/TaskScheduleGroup__c.object
<CustomObject>
    <description>[Business] Whenever a Tasks is assigned to a group of Users (Can be DOH specific)</description>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Task_Schedule_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClosedSubTaskCount__c</fullName>
        <label>Closed SubTask Count</label>
        <summaryFilterItems>
            <field>TaskScheduleDetail__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>TaskScheduleDetail__c.TaskScheduleGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <formula>NOT(and(OR(TEXT(Status__c ) = &apos;Not Sent for Approval&apos;,TEXT(Status__c ) = &apos;Disapproved&apos;),AssignedTo__c = $User.Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditBtn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePublishSchedule__c</fullName>
        <formula>NOT(CONTAINS( $UserRole.Name , &apos; Program Manager &apos;))</formula>
        <label>Hide Publish Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSendForApproval__c</fullName>
        <formula>NOT( AND(text(Status__c) != &apos;Approved&apos;,text(Status__c) != &apos;Sent for Approval&apos;,AssignedTo__c =  $User.Id))</formula>
        <label>Hide Send For Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPublished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentID__c</fullName>
        <formula>TaskSchedule__r.ParentId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Object ParentID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendReminderBeforeEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder Before End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendReminderBeforeStartDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Reminder Before Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent for Approval</fullName>
                    <default>true</default>
                    <label>Not Sent for Approval</label>
                </value>
                <value>
                    <fullName>Sent for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubTaskCount__c</fullName>
        <label>Sub Task Count</label>
        <summaryForeignKey>TaskScheduleDetail__c.TaskScheduleGroup__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TaskSchedule__c</fullName>
        <label>Task Schedule</label>
        <referenceTo>TaskSchedule__c</referenceTo>
        <relationshipName>Task_Schedule_Group</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TaskType__c</fullName>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Task Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Schedule Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Group</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Due_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(or(ISCHANGED( EndDate__c ),isnew()), EndDate__c &lt; TODAY()), true, false)</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>Due Date cannot be earlier than Today’s Date</errorMessage>
    </validationRules>
</CustomObject>